[package]
name = "snekcloud-server"
version = "0.1.0"
authors = ["trivernis <trivernis@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vented = "0.4.3"
rusqlite = "0.24.1"
rand = "0.7.3"
base64 = "0.13.0"
structopt = "0.3.20"
mac_address = "1.1.1"
hostname = "0.3.1"
log = "0.4.11"
env_logger = "0.8.1"
colored = "2.0.0"
chrono = "0.4.19"
toml = "0.5.7"
serde = { version = "1.0.117", features = ["serde_derive"] }
config = "0.10.1"
glob = "0.3.0"
scheduled-thread-pool = "0.2.5"
num_cpus = "1.13.0"